/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine_examples.pingh.sessions;

import "spine/options.proto";

option (type_url_prefix) = "type.pingh.spine.io";
option java_package = "io.spine.examples.pingh.sessions";
option java_outer_classname = "UserSessionProto";
option java_multiple_files = true;

import "spine_examples/pingh/sessions/identifiers.proto";
import "spine_examples/pingh/github/values.proto";
import "google/protobuf/timestamp.proto";

// The process of session existence.
//
// Manages the user's login process to the Pingh app. First, the user code and device code
// are requested. Then, the user code is provided to the user for entry on GitHub.
// Finally, it verifies the user code using the device code and obtains `PersonalAccessToken`.
//
message UserSession {
    option (entity) = { kind: PROCESS_MANAGER };

    // The ID of user session.
    SessionId id = 1;

    // The device code used to verify user login on GitHub.
    //
    // If this field is specified, the login process starts and
    // waits for the user to enter their code.
    //
    spine_examples.pingh.github.DeviceCode device_code = 2;

    // The token used to renew the `PersonalAccessToken` when it expires.
    //
    // This field is specified if the user is logged in.
    //
    spine_examples.pingh.github.RefreshToken refresh_token = 4;

    // The time by which the login process must be completed;
    // otherwise, the login will be considered expired.
    //
    // This field is set when the login process begins
    // and is cleared once the login is successfully completed.
    //
    google.protobuf.Timestamp login_deadline = 5;

    reserved 3;
    reserved "when_access_token_expires";
}
